machine view - work in progress

--- a/mysite/supply_info/templates/supply_info/machine_list.html
+++ b/mysite/supply_info/templates/supply_info/machine_list.html
@@ -1,3 +1,7 @@
 {% for machine in machines %}
-    <p>{{machine}} </p>
+    <p>{{machine.product_code}}|
+        {% if machine.availability %}
+        {{ machine.availability}}
+        {% endif %}
+        |{{machine.price_d }} zł</p>
     {% endfor %}
