--- a/mysite/supply_info/templates/supply_info/update_product_info.html
+++ b/mysite/supply_info/templates/supply_info/update_product_info.html
@@ -1,5 +1,10 @@
-<h2>Dodaj dane</h2>
+{% extends 'supply_info/base.html' %}
+
+{% block content %}
+<h3>Dodaj dane</h3>
 <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="save btn btn-default">Zapisz</button>
 </form>
+
+{% endblock %}
