improvements in db models and products import process

--- a/mysite/supply_info/templates/supply_info/base.html
+++ b/mysite/supply_info/templates/supply_info/base.html
@@ -9,9 +9,10 @@
     </div>
     <br>
     <div>
-        Menu Admina: , uaktualnij stany,
-        <a href="{% url 'admin:index' %}">Admin Panel</a> |
+        Admin_menu:
+        <a href="{% url 'admin:index' %}">Admin panel</a> |
         <a href="{% url 'supply_info:update_product_info' %}" >Zasil bazę</a> |
+        <a href="{% url 'supply_info:update_product_availability' %}">Uaktualnij stany</a> |
 
     </div><br>
 
