--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -19,13 +19,14 @@
     {% endif %}
     {% if user.is_authenticated %}
     <div class ='user_menu'>
-        <p>Zalogowany jako: {{ user.username }}</p>
+        <p>Zalogowany jako: {{ user.username }} <a href="{% url 'logout' %}">Wyloguj</a></p>
         <p>User_menu: <a href="{% url 'supply_info:machine_list' %}" >Lista maszyn</a></p>
         <form action="{% url 'supply_info:search_product' %}" method="GET" value="{{request.GET.q}}">
         <input type="text" name="q" value="{{request.GET.q}}" placeholder="wpisz kod produktu"/>
         <input type="submit" name="submit" value="Szukaj"/>
         </form>
-
+    {% else %}
+        {# <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> #}
     </div><br>
     {% endif %}
     <body>
