--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -2,13 +2,16 @@
 <html>
     <head>
         <title>Stany magazynowe</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/supply_info.css' %}">
     </head>
     <div class="page-header">
     <h1>Stany magazynowe JANOME i ELNA</h1>
     </div>
     <br>
-    {% if user.is_authenticated %}
+    {% if user.is_superuser %}
     <div>
         Admin_menu:
         <a href="{% url 'admin:index' %}">Admin panel</a> |
@@ -18,15 +21,17 @@
     </div><br>
     {% endif %}
     {% if user.is_authenticated %}
-    <div class ='user_menu'>
-        <p>Zalogowany jako: {{ user.username }} <a href="{% url 'logout' %}">Wyloguj</a></p>
+    <div class ="user_menu">
+        <p>Zalogowany jako: <b>{{ user.username }}</b> <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span></a>
+        </p>
+
         <p>User_menu: <a href="{% url 'supply_info:machine_list' %}" >Lista maszyn</a></p>
         <form action="{% url 'supply_info:search_product' %}" method="GET" value="{{request.GET.q}}">
         <input type="text" name="q" value="{{request.GET.q}}" placeholder="wpisz kod produktu"/>
         <input type="submit" name="submit" value="Szukaj"/>
         </form>
     {% else %}
-        {# <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> #}
+        <a href="{% url 'login' %}" class="top-menu"><span class="pull-right glyphicon glyphicon-user" style="color:red"></span></a><br>
     </div><br>
     {% endif %}
     <body>
