--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -32,7 +32,7 @@
             <input type="submit" name="submit" value="Szukaj"/>
             </form>
         {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="pull-right glyphicon glyphicon-user" style="color:red"></span></a><br>
+            <a href="{% url 'login' %}" class="top-menu"><span class="pull-right glyphicon glyphicon-log-in" style="color:red"></span></a><br>
         </div><br>
         {% endif %}
 
