--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -12,6 +12,7 @@
         <div class="page-header">
         <h1>Stany magazynowe JANOME i ELNA</h1>
         </div>
+        <div>Ostatnia aktualizacja: {{ last_update_time.date }}</div>
         <br>
         {% if user.is_superuser %}
         <div>
