--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -37,7 +37,7 @@
             <p>Zalogowany jako: <b>{{ user.username }}</b> <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span></a>
             </p>
 
-            <p>User_menu: <a href="{% url 'supply_info:machine_list' %}" >Lista maszyn</a></p>
+            <p>User_menu: <a href="{% url 'supply_info:machines_list' %}" >Lista maszyn</a></p>
             <form action="{% url 'supply_info:search_product' %}" method="GET" value="{{request.GET.q}}">
             <input type="text" name="q" value="{{request.GET.q}}" placeholder="wpisz kod produktu"/>
             <input type="submit" name="submit" value="Szukaj"/>
