--- a/supply_info/templates/supply_info/machines_list.html
+++ b/supply_info/templates/supply_info/machines_list.html
@@ -10,7 +10,7 @@
             {% if user.is_authenticated %}
                 <th width="6%"> Stan </th>
             {% endif %}
-            <th width="7%">Cena (zł)</th>
+            <th width="7%" >Cena (zł)</th>
             <th width="16%">Kolejna dostawa</th>
             <th>Uwagi</th>
         </tr>
@@ -30,7 +30,7 @@
                     {% for item in machine.product_availability.all %}
                         <td id="{{ item.availability_info }}td" align="center"> {{ item.availability_info }}</td>
                         {% if user.is_authenticated %}
-                            <td> {{ item.availability }}</td>
+                            <td align="right"> {{ item.availability }}</td>
                         {% endif %}
                     {% endfor %}
                 {% else %}
