fix change password redirect + message dispaly

--- a/supply_info/templates/supply_info/change_password.html
+++ b/supply_info/templates/supply_info/change_password.html
@@ -4,6 +4,13 @@
 
 <hr>
 <h3>Zmiana hasła</h3>
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+          <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
 <hr>
 <form method="post">
     {% csrf_token %}
