--- a/supply_info/templates/supply_info/products_list.html
+++ b/supply_info/templates/supply_info/products_list.html
@@ -3,23 +3,61 @@
 
 {% block content %}
 
-{% for product in products|my_filter:category %}
-{{ product.code }}|
+<br/><br/>
+<div class="machine_table">
+    <table border="1" id="machines_list_table">
+        <tr>
+            <th width=30%>Kod produktu</th>
+            <th width=10%>Dostępność</th>
+            <th width=11%>Cena katalogowa (brutto)</th>
+            <th width=24%>Kolejna dostawa</th>
+            <th>Uwagi</th>
+        </tr>
+        {% for product in products|my_filter:sub_type %}
+        <tbody id="machines_search_table_body">
+        {% if product.active_product_list.all %}
+        {% for item in product.active_product_list.all %}
+        {% if item.is_active %}
 
-{% if product.product_availability.all %}
-    {% for item in product.product_availability.all %}
-
-   ilość: {{ item.availability }} |
-
-    {% endfor %}
-{% endif %}
-
-
-{% for item in product.price_lists.all %}
-                    <td align="right">{{ item.price_d }}</td>
-{% endfor %}
-
-<br>
-{% endfor %}
+        <tr>
+            <form action="" method="post">
+                {% if product.site_address %}
+                    <td><a href="{{ product.site_address }}" style="color:black" title="{{ product.name }}">{{ product.code }}</a></td>
+                {% else %}
+                    <td>{{ product.code }}</td>
+                {% endif %}
+                {% if product.product_availability.all %}
+                    {% for item in product.product_availability.all %}
+                        <td> {{ item.availability }}</td>
+                    {% endfor %}
+                {% else %}
+                    <td> </td>
+                {% endif %}
+                {% for item in product.price_lists.all %}
+                    <td>{{ item.price_d }} zł</td>
+                {% endfor %}
+                <td>{{ product.next_shipment|default_if_none:"" }}</td>
+                <td>{{ product.additional_info|default_if_none:"" }}</td>
+                <td width="1%"><a href="#" id="show_{{ forloop.parentloop.counter }}" ><span class="glyphicon glyphicon-plus"></span></a></td>
+            </form>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <div id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
+                    <br>Opis: {{ product.name }}
+                    <br>Cena hurtowa:  {% for item in product.price_lists.all %}
+                                {{ item.price_b }} zł NETTO
+                            {% endfor %}
+                    <br>
+                </div>
+            </td>
+        </tr>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+        </tbody>
+        {% endfor %}
+    </table>
+</div>
 
 {% endblock %}
