--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -42,8 +42,8 @@
             <p>Przegląd: <a href="{% url 'supply_info:machines_list' %}" >Lista maszyn</a></p>
             <p>Grupy produktów:
                 <a href="{% url 'supply_info:products_list' sub_type='akcesoria_eti' %}" >ETI</a> |
-                <a href="{% url 'supply_info:products_list' sub_type='hafciarka+program' %}" >Hafciarki z programami</a> |
-                <a href="{% url 'supply_info:products_list' sub_type='igły' %}" >Igły</a> |
+                <a href="{% url 'supply_info:products_list' sub_type='hafciarka_z_programem' %}" >Hafciarki z programami</a> |
+                <a href="{% url 'supply_info:products_list' sub_type='igly' %}" >Igły</a> |
                 <a href="{% url 'supply_info:products_list' sub_type='nici' %}" >Nici</a> |
                 <a href="{% url 'supply_info:products_list' sub_type='nozyczki' %}" >Nożyczki</a> |
                 <a href="{% url 'supply_info:products_list' sub_type='programy' %}" >Programy</a> |
