--- a/supply_info/templates/supply_info/pagination.html
+++ b/supply_info/templates/supply_info/pagination.html
@@ -1,5 +1,5 @@
-<div class="pagination">
-    <span class="step-links">
+<div>
+    <span>
         {% if page.has_previous %}
             <a href="?page={{ page.previous_page_number }}">Poprzednia<<</a>
         {% endif %}
