polishing and admin registration

--- a/serial_numbers/templates/serial_numbers/add_shipment.html
+++ b/serial_numbers/templates/serial_numbers/add_shipment.html
@@ -5,6 +5,7 @@
 <h3>{{ title }}</h3>
 {% else %}
 <h3>Dodaj wysyłkę</h3>
+!!! do ułożenia !!!
 {% endif %}
 <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
