add links to new views

--- a/supply_info/templates/supply_info/admin_menu.html
+++ b/supply_info/templates/supply_info/admin_menu.html
@@ -1,5 +1,5 @@
 <div>
-    Admin_menu:
+    Administracja:
     <a href="{% url 'admin:index' %}">Admin panel</a> |
     <a href="{% url 'supply_info:update_product_info' %}" >Zasil bazę</a> |
     <a href="{% url 'supply_info:update_product_availability' %}">Uaktualnij stany</a> |
