--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -25,7 +25,9 @@
         <br>
         {% if user.is_staff %}
             {% include "supply_info/admin_menu.html" %}<br>
+            {% include "supply_info/warehouse_menu.html" %}<br>
         {% endif %}
+        <hr>
         {% if user.is_authenticated %}
         <div class ="user_menu">
             <p>Zalogowany jako: <b>{{ user.username }}</b>
