add info about data format imput in delivery_note_number field

--- a/serial_numbers/templates/serial_numbers/add_shipment.html
+++ b/serial_numbers/templates/serial_numbers/add_shipment.html
@@ -14,8 +14,8 @@
             <td>{{ form.customer }}</td>
         </tr>
         <tr>
-            <td>{{ form.delivery_note_number.label_tag }}</td>
-            <td>{{ form.delivery_note_number }}</td>
+            <td><B>Dokument: </B>WZ/</td>
+            <td>{{ form.delivery_note_number }}/{{ date_year }}</td>
         </tr>
         <tr>
             <td>{{ form.shipment.label_tag }}</td>
