--- a/supply_info/templates/supply_info/filters_menu.html
+++ b/supply_info/templates/supply_info/filters_menu.html
@@ -7,6 +7,7 @@
         <a href="{% url 'supply_info:products_list' sub_type='nici' %}" >Nici</a> |
         <a href="{% url 'supply_info:products_list' sub_type='nozyczki' %}" >Nożyczki</a> |
         <a href="{% url 'supply_info:products_list' sub_type='programy' %}" >Programy</a> |
+        <a href="{% url 'supply_info:products_list' sub_type='wykroje' %}" >Wykroje</a> |
         <a href="{% url 'supply_info:products_list' sub_type='zestawy_akcesoriow' %}" >Zestawy akcesoriów</a>
     </p>
 </div>
