--- a/supply_info/static/css/supply_info.css
+++ b/supply_info/static/css/supply_info.css
@@ -1,5 +1,10 @@
+/* =====Global ====*/
+* {
+    font-family: Lato,sans-serif;
+}
+
+/* ============== */
 #machines_list_table {
-  font-family: Lato,sans-serif;
   border-collapse: collapse;
   width: 65%;
   color: black;
@@ -43,4 +48,58 @@ h1, h2, h3, h4 {
 
 head, body {
 margin: 15px;
+}
+
+/* ===== Left nav bar =====*/
+
+nav {
+	font-size: 13px;
+	text-transform: uppercase;
+	float: left;
+	position: relative;
+	width: 260px;
+    height: 100%;
+}
+nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+nav ul li {
+  /* Sub Menu */
+}
+nav ul li a {
+	display: block;
+	/*background: #ebebeb;*/
+	padding: 10px 15px;
+	color: #333;
+	text-decoration: none;
+	-webkit-transition: 0.2s linear;
+	-moz-transition: 0.2s linear;
+	-ms-transition: 0.2s linear;
+	-o-transition: 0.2s linear;
+	transition: 0.2s linear;
+}
+nav ul li a:hover {
+	background: #ddd;
+	text-decoration: none;
+	/*color: #515151;*/
+}
+nav ul li a .fa {
+	width: 16px;
+	text-align: center;
+	margin-right: 5px;
+	float:right;
+}
+nav ul ul {
+	background-color:#e5ecf0;
+}
+nav ul li ul li a {
+	/*background: #f8f8f8;*/
+	border-left: 4px solid transparent;
+	padding: 10px 20px;
+}
+nav ul li ul li a:hover {
+	background: #ddd;
+	border-left: 4px solid #e13e2f;
 }
