--- a/supply_info/static/css/supply_info.css
+++ b/supply_info/static/css/supply_info.css
@@ -53,7 +53,7 @@ margin: 15px;
 /* ===== Left nav bar =====*/
 
 nav {
-	font-size: 13px;
+	font-size: 15px;
 	text-transform: uppercase;
 	float: left;
 	position: relative;
@@ -103,3 +103,73 @@ nav ul li ul li a:hover {
 	background: #ddd;
 	border-left: 4px solid #e13e2f;
 }
+
+/* ==== upper menu ====*/
+
+.upper-menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-right:315px;
+  overflow: hidden;
+  border: 1px solid #e7e7e7;
+  font-size: 16px;
+}
+
+.inside-upper-menu {
+  float: right;
+}
+
+.inside-upper-menu a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 16px 16px;
+  text-decoration: none;
+}
+.inside-upper-menu div {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 16px 16px;
+  text-decoration: none;
+}
+.inside-upper-menu form {
+  display: block;
+  color: black;
+  align: center;
+  padding-top: 13px;
+}
+
+.inside-upper-menu a:hover:not(.active) {
+  background-color: #ddd;
+}
+
+.inside-upper-menu a.active {
+  color: white;
+  background-color: #ddd;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  height:30px;
+  background-color: white;
+  border: none;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  padding: 0px;
+}
+input[type=submit]:hover {
+    background-color: #ddd;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  /*border: 1px solid #555;*/
+  outline: none;
+}
+input[type=text]:focus {
+  background-color: #ddd;
+}
+
